--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,75 @@
 /*------------------------------*/
 /*               DUMMARY        */
 /*------------------------------*/
-/* L        -1-COLORS*/
+/* L        -1-GENERAL*/
+/*-------------------------------*/
 
+
+/*---GENERAL---*/
 :root {
     --primary:#9356DC;
     --secondary:#FF79DA;
     --tertiary:#99E2D0;
-
 }
-
-
-
-h1{
-    color: var(--primary);
+@font-face {
+    font-family:"shrikhand";
+    src: url("ressources/fonts/Shrikhand/Shrikhand-Regular.ttf");
+}
+@font-face {
+    font-family:"roboto";
+    src: url("ressources/fonts/Roboto/Roboto-Regular.ttf");
+}
+body{
+    font-family: "roboto";
+    margin: 0;
 }
 h2{
-    color: var(--secondary);
+    margin: 0;
 }
-h3{
-    color: var(--tertiary);
+p{
+    margin: 0;
+}
+img{
+    width: 30%;
+    height: auto;
+}
+
+
+/*---HEADER---*/
+header{
+    padding: .5rem;
+    box-shadow:rgba(0,0,0,0.3) 0rem 0rem .33rem 0rem;
+    position: relative;
+
+}
+h1{
+    font-size: 1.9rem;
+    color: black;
+    font-family:"shrikhand";
+    text-align: center;
+    font-weight:lighter;
+    margin: 0;
+}
+/*---PLACE---*/
+#secplace{
+    background-color:#eaeaea ;
+    padding: 1rem;
+}
+#divplace{
+    display: flex;
+    justify-content: center;
+}
+#divplace p{
+    font-weight:bold;
+    margin: 0 1rem;
+}
+/*---SEARCH---*/
+#secsearch{
+    background-color: #f6f6f6;
+}
+#divsearch h2{
+    text-align: center;
+}
+#divsearch p{
+    text-align: center;
 }
