7-1 version + all pages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,84 @@
-/*---COLORS---*/
-/*---FONTS---*/
+/*---VARIABLES---*/
+/*---MIXINS---*/
+/*---HEADER---*/
+header {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
+          box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
+  padding: .5rem 0;
+  position: relative;
+}
+
+h1 {
+  font-size: 1.9rem;
+  color: black;
+  text-align: center;
+}
+
+/*---LA-PALETTE-DU-GOUT---*/
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.header-container .fa-arrow-retour {
+  margin: 0 4rem 0 0;
+}
+
+/*---FOOTER---*/
+footer {
+  background-color: #353535;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  color: white;
+  height: 150px;
+  width: 90%;
+  padding: 2rem 0;
+}
+
+.footer-list h4 {
+  margin: 0 0 1rem 0;
+}
+
+.footer-list li {
+  list-style: none;
+  width: 90%;
+}
+
+.footer-list i {
+  font-size: 1rem;
+  margin: 0 1rem 0 0;
+}
+
+/*---TYPO---*/
 @font-face {
   font-family: "shrikhand";
-  src: url("ressources/fonts/Shrikhand/Shrikhand-Regular.ttf");
+  src: url("../../sass/base/fonts/Shrikhand-Regular.ttf");
 }
 
 @font-face {
   font-family: "roboto";
-  src: url("ressources/fonts/Roboto/Roboto-Regular.ttf");
+  src: url("../../sass/base/fonts/Roboto-Regular.ttf");
 }
 
-/*---MIXINS---*/
-/*---GENERAL---*/
+/*---BASE---*/
 body {
   font-family: "roboto";
 }
@@ -33,20 +100,6 @@ a {
 .shrikhand {
   font-family: "shrikhand";
   font-weight: lighter;
-}
-
-/*---HEADER---*/
-header {
-  padding: .5rem 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0rem 0rem 0.33rem 0rem;
-          box-shadow: rgba(0, 0, 0, 0.3) 0rem 0rem 0.33rem 0rem;
-  position: relative;
-}
-
-h1 {
-  font-size: 1.9rem;
-  color: black;
-  text-align: center;
 }
 
 /*---PLACE---*/
@@ -105,16 +158,15 @@ h1 {
   color: #353535;
 }
 
-.sec-explore__div button {
-  color: white;
-  font-family: roboto;
-  font-size: 1rem;
-  border-radius: 2rem;
-  border: none;
-  background: -webkit-gradient(linear, left bottom, left top, from(#9356DC), to(#FF79DA));
-  background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+.purple-button {
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
           box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
+  font-size: 1rem;
+  color: white;
+  border: none;
+  border-radius: 2rem;
+  background: -webkit-gradient(linear, left bottom, left top, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
   padding: 1rem 1.5rem;
 }
 
@@ -143,12 +195,12 @@ h1 {
 }
 
 .sec-fonction__ol li {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
+          box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
   list-style: none;
   counter-increment: my-awesome-counter;
   font-size: 1rem;
   font-weight: bold;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
-          box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
   border-radius: 1.2rem;
   background-color: #f6f6f6;
   width: 100%;
@@ -207,6 +259,8 @@ h1 {
 }
 
 .link-resto {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
+          box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -219,8 +273,6 @@ h1 {
   border-radius: 1rem;
   margin: 1rem 0;
   height: 250px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.25rem 0.5rem;
-          box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.25rem 0.5rem;
 }
 
 .link-resto__new {
@@ -276,7 +328,7 @@ i {
 }
 
 .fas.fa-heart {
-  color: white;
+  color: rgba(255, 255, 255, 0);
 }
 
 .far {
@@ -293,70 +345,39 @@ i {
 .far:hover + .fas {
   color: #9c47fc;
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 /*---FOOTER---*/
-footer {
-  background-color: #353535;
+/*---La-PALETTE-DU-GOUT---*/
+/*---THUMBNAIL---*/
+.thumbnail {
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/*---HEART---*/
+.heart-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.footer-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  color: white;
-  height: 150px;
-  width: 90%;
-  padding: 2rem 0;
-}
-
-.footer-list h4 {
-  margin: 0 0 1rem 0;
-}
-
-.footer-list li {
-  list-style: none;
-  width: 90%;
-}
-
-.footer-list i {
-  margin: 0 1rem 0 0;
-}
-
-/*---La-PALETTE-DU-GOUT---*/
-/*---HEADER---*/
-.header-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 90%;
-  margin: 0 auto;
 }
 
-.header-container .fa-arrow-left {
-  margin: 0 4rem 0 0;
-}
-
-/*---THUMBNAIL---*/
 /*---Menu---*/
 .sec-menu {
   position: relative;
   z-index: 1;
   background-color: #f6f6f6;
-  border-radius: 3rem;
+  border-radius: 3rem 3rem 0 0;
   margin: -3rem 0 0 0;
   padding: 3rem 0 0 0;
 }
@@ -377,4 +398,114 @@ footer {
 .sec-menu__footer {
   width: 90%;
   margin: 0 auto;
+}
+
+.menu-titre {
+  font-weight: 100;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #99E2D0;
+          text-decoration-color: #99E2D0;
+  text-underline-offset: 0.2rem;
+  text-underline-position: under;
+  text-decoration-thickness: 0.2rem;
+  margin: 1.5rem 0;
+}
+
+/*---CARTES---*/
+.menu-item {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
+          box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  border-radius: 1rem;
+  margin: 1rem 0;
+  height: 75px;
+}
+
+.menu-item__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-item__check {
+  height: 100%;
+  width: 0%;
+  background-color: #99E2D0;
+}
+
+.menu-item .fa-check-circle {
+  font-size: 0rem;
+}
+
+.menu-item:hover {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.menu-item:hover .menu-item__content {
+  padding: 0 1rem;
+}
+
+.menu-item:hover .menu-item__check {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25%;
+  border-radius: 0 1rem 1rem 0;
+}
+
+.menu-item:hover .fa-check-circle {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.menu-food {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.menu-prix {
+  font-weight: bold;
+}
+
+/*---COMMANDER/FOOTER---*/
+.sec-menu__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem 0;
+}
+
+.sec-menu__footer .purple-button {
+  padding: 1rem 3rem;
 }
