--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,54 +1,15 @@
-/*---COLORS---*/
-$primary:#9356DC;
-$secondary:#FF79DA;
-$tertiary:#99E2D0;
-$lightgrey:#f6f6f6;
-$darkgrey:#353535;
-/*---FONTS---*/
-@font-face {
-    font-family:"shrikhand";
-    src: url("ressources/fonts/Shrikhand/Shrikhand-Regular.ttf");
-}
-@font-face {
-    font-family:"roboto";
-    src: url("ressources/fonts/Roboto/Roboto-Regular.ttf");
-}
+/*---VARIABLES---*/
+@import "./utils/variables";
 /*---MIXINS---*/
-@mixin centered90 {
-    width: 90%;
-    margin: 0 auto;
-}
-/*---GENERAL---*/
-body{
-    font-family: "roboto";
-}
-body,section,ul,li,div,h4,h3,h2,h1,img,p{
-    margin: 0;
-}
-img{
-    width: 100%;
-    height: auto;
-}
-a{
-    color: black;
-    text-decoration: none;
-}
-.shrikhand{
-    font-family: "shrikhand";
-    font-weight:lighter;
-}
+@import "./utils/mixins";
 /*---HEADER---*/
-header{
-    padding: .5rem 0;
-    box-shadow:rgba(0,0,0,0.3) 0rem 0rem .33rem 0rem;
-    position: relative;
-}
-h1{
-    font-size: 1.9rem;
-    color: black;
-    text-align: center;
-}
-
+@import "./layout/header";
+/*---FOOTER---*/
+@import "./layout/footer";
+/*---TYPO---*/
+@import "./base/typography";
+/*---BASE---*/
+@import "./base/base";
 /*---PLACE---*/
 .sec-place{
     background-color:#eaeaea ;
@@ -76,6 +37,7 @@ h1{
         width: 90%;
         padding: 2rem 0 3rem 0;
     }
+
    &__div h2{
         text-align: center;
     }
@@ -83,16 +45,15 @@ h1{
         text-align: center;
         color:#353535;
     }
-    &__div button{
-        color: white;
-        font-family: roboto;
-        font-size: 1rem;
-        border-radius: 2rem;
-        border: none;
-        background: linear-gradient(0deg,$primary 0%, $secondary 100%);
-        box-shadow: rgba(0,0,0,.3) 0rem 0.2rem 0.5rem 0rem;
-        padding: 1rem 1.5rem;
-    }
+}
+.purple-button{
+    @include shadow(.3);
+    font-size: 1rem;
+    color: white;
+    border: none;
+    border-radius: 2rem;
+    background: linear-gradient(0deg,$primary 0%, $secondary 100%);
+    padding: 1rem 1.5rem;
 }
 /*---FONCTIONNEMENT---*/
 .sec-fonction{
@@ -108,11 +69,11 @@ h1{
         padding:4rem 0 5rem;
     }
     &__ol li{
+        @include shadow(.3);
         list-style: none;
         counter-increment: my-awesome-counter;
         font-size: 1rem;
         font-weight: bold;
-        box-shadow: rgba(0,0,0,0.1) 0rem .2rem .5rem 0rem;
         border-radius: 1.2rem;
         background-color: $lightgrey ;
         width: 100%;
@@ -158,6 +119,7 @@ h1{
     }
 }
 .link-resto{
+    @include shadow(.3);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -165,7 +127,6 @@ h1{
     border-radius: 1rem;
     margin: 1rem 0;
     height: 250px;
-    box-shadow: rgba(0,0,0,.1) 0rem .25rem .5rem;
     &__new{
         position: absolute;
         background-color: $tertiary;
@@ -201,7 +162,7 @@ i{
     font-size: 1.5rem;
 }
 .fas.fa-heart{
-    color: white;
+    color: rgba(255, 255, 255, 0);
 }
 .far{
     position: relative;
@@ -215,51 +176,31 @@ i{
 .far:hover+.fas{
     color: #9c47fc;
     background: -webkit-linear-gradient($primary, $secondary);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 /*---FOOTER---*/
-footer{
-    background-color: $darkgrey;
+
+/*---La-PALETTE-DU-GOUT---*/
+
+/*---THUMBNAIL---*/
+.thumbnail{
+    height: 250px;
+    object-fit: cover;
+}
+/*---HEART---*/
+.heart-container{
     display: flex;
     justify-content: center;
-}
-.footer-list{
-    display: flex;
-    flex-wrap: wrap;
-    color: white;
-    height: 150px;
-    width: 90%;
-    padding: 2rem 0;
-    h4{
-        margin:0 0 1rem 0;
-    }
-    li{
-        list-style: none;
-        width: 90%;
-    }
-    i{
-        margin: 0 1rem 0 0;
-    }
-}
-/*---La-PALETTE-DU-GOUT---*/
-/*---HEADER---*/
-.header-container{
-    display: flex;
     align-items: center;
-    @include centered90();
-    .fa-arrow-left{
-        margin: 0 4rem 0 0;
-    }
 }
-/*---THUMBNAIL---*/
-
 /*---Menu---*/
 .sec-menu{
     position: relative;
     z-index: 1;
     background-color: $lightgrey;
-    border-radius:3rem;
+    border-radius:3rem 3rem 0 0;
     margin: -3rem 0 0 0;
     padding: 3rem 0 0 0;
     &__header{
@@ -272,5 +213,74 @@ footer{
     }
     &__footer{
         @include centered90();
+    }
+}
+.menu-titre{
+    font-weight: 100;
+    text-decoration: underline;
+    text-decoration-color: $tertiary;
+    text-underline-offset: 0.2rem;
+    text-underline-position: under;
+    text-decoration-thickness: 0.2rem;
+    margin: 1.5rem 0;
+}
+/*---CARTES---*/
+.menu-item{
+    @include shadow(.1);
+    display: flex;
+    background-color: white;
+    border-radius: 1rem;
+    margin: 1rem 0;
+    height: 75px;
+    &__content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1rem;
+        width: 100%;
+        height: 100%;
+    }
+    &__check{
+        height: 100%;
+        width: 0%;
+        background-color: $tertiary;
+    }
+    .fa-check-circle{
+        font-size: 0rem;
+    }
+}
+.menu-item:hover{
+    justify-content: space-around;
+    .menu-item__content{
+        padding: 0 1rem;
+    }
+    .menu-item__check{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 25%;
+        border-radius: 0 1rem 1rem 0;
+    }
+    .fa-check-circle{
+        color: white;
+        font-size: 1.5rem;
+    }
+}
+.menu-food{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.menu-prix{
+    font-weight: bold;
+}
+/*---COMMANDER/FOOTER---*/
+.sec-menu__footer{
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+    .purple-button{
+        padding: 1rem 3rem;
     }
 }
