--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,9 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -27,7 +30,8 @@ h1 {
 }
 
 .header-container .fa-arrow-retour {
-  margin: 0 4rem 0 0;
+  position: absolute;
+  left: 2rem;
 }
 
 /*---FOOTER---*/
@@ -65,6 +69,49 @@ footer {
 .footer-list i {
   font-size: 1rem;
   margin: 0 1rem 0 0;
+}
+
+/*---COMMANDER/FOOTER---*/
+.sec-menu__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem 0;
+}
+
+.sec-menu__footer .purple-button {
+  padding: 1rem 3rem;
+}
+
+/*---MEDIA QUERIES---*/
+@media (min-width: 768px) {
+  .footer-list .footer-title {
+    width: 100%;
+  }
+  .footer-list li {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .footer-list {
+    height: 80px;
+  }
+  .footer-list .footer-title {
+    width: 100%;
+  }
+  .footer-list li {
+    width: 25%;
+  }
+}
+
+@media (min-width: 1440px) {
+  .footer-list li {
+    width: 20%;
+  }
 }
 
 /*---TYPO---*/
@@ -115,9 +162,14 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
-.sec-place__div p {
+.sec-place__div h2 {
+  color: #353535;
+  font-size: 1rem;
   font-weight: bold;
   margin: 0 1rem;
 }
@@ -195,9 +247,16 @@ a {
 }
 
 .sec-fonction__ol li {
+  list-style: none;
+}
+
+.sec-fonction__ol h2 {
+  margin: 0 0 0 .75rem;
+}
+
+.sec-fonction__ol .fonc-carte {
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
           box-shadow: rgba(0, 0, 0, 0.3) 0rem 0.2rem 0.5rem 0rem;
-  list-style: none;
   counter-increment: my-awesome-counter;
   font-size: 1rem;
   font-weight: bold;
@@ -208,7 +267,7 @@ a {
   margin: 0 0 0 .875rem;
 }
 
-.sec-fonction__ol li::before {
+.sec-fonction__ol .fonc-carte::before {
   display: inline-block;
   position: relative;
   left: -1.75rem;
@@ -243,19 +302,25 @@ a {
   height: -moz-fit-content;
   height: fit-content;
   background-color: #f6f6f6;
-  padding: 3rem 0;
-}
-
-.sec-rest__grid-container {
-  width: 90%;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  padding: 2rem 0 3rem 0;
 }
 
 .sec-rest h2 {
   text-align: left;
   width: 90%;
+  margin: 1rem 0;
+}
+
+.sec-rest__grid-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  grid-gap: 1rem 0;
+  width: 90%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .link-resto {
@@ -266,12 +331,11 @@ a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   background-color: white;
   border-radius: 1rem;
-  margin: 1rem 0;
   height: 250px;
 }
 
@@ -280,7 +344,6 @@ a {
   background-color: #99E2D0;
   color: #1b6150;
   border-radius: .2rem;
-  right: 5%;
   margin: 1rem 1rem 0 0;
   padding: .3rem 1rem;
 }
@@ -305,6 +368,7 @@ a {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  margin: 0 auto;
   width: 90%;
   height: 30%;
 }
@@ -351,7 +415,7 @@ i {
 }
 
 /*---FOOTER---*/
-/*---La-PALETTE-DU-GOUT---*/
+/*---MENU PAGE---*/
 /*---THUMBNAIL---*/
 .thumbnail {
   height: 250px;
@@ -495,17 +559,98 @@ i {
   font-weight: bold;
 }
 
-/*---COMMANDER/FOOTER---*/
-.sec-menu__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 2rem 0;
+/*------MEDIAQUERIES------*/
+/*---TABLET---*/
+@media (min-width: 768px) {
+  .sec-explore__div {
+    height: 120px;
+    width: 90%;
+    padding: 2rem 0 3rem 0;
+  }
+  .sec-explore__div h2 {
+    text-align: center;
+    width: 100%;
+  }
+  .sec-explore__div p {
+    width: 100%;
+  }
+  .sec-fonction__ol {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    height: 230px;
+  }
+  .sec-fonction__ol .fonc-titre {
+    width: 100%;
+  }
+  .sec-fonction__ol .fonc-carte {
+    width: 44%;
+  }
+  .sec-rest__grid-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+  }
 }
 
-.sec-menu__footer .purple-button {
-  padding: 1rem 3rem;
+@media (min-width: 1024px) {
+  .sec-fonction__ol {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    height: 125px;
+  }
+  .sec-fonction__ol .fonc-carte {
+    width: 27%;
+  }
+  .sec-rest__grid-container {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1024px) and (min-width: 1440px) {
+  .sec-fonction__ol {
+    padding: 2rem 0 3rem;
+  }
+  .sec-fonction__ol .fonc-carte {
+    width: 29%;
+  }
+  .sec-rest__grid-container {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+/*---RESTAURANT-PAGES---*/
+/*---TABLET---*/
+@media (min-width: 768px) {
+  .sec-item-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .sec-item-container h3 {
+    margin: 2rem 0 .5rem .5rem;
+    width: 100%;
+  }
+  .menu-item {
+    margin: .5rem 0;
+    width: 48%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .sec-item-container {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .sec-item-container h3 {
+    margin: 2rem 0 .5rem .5rem;
+    width: 100%;
+  }
 }
