--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,8 +17,11 @@
     &__div{
         display: flex;
         justify-content: center;
+        align-items: flex-end;
     }
-    &__div p{
+    &__div h2{
+        color: $darkgrey;
+        font-size: 1rem;
         font-weight:bold;
         margin: 0 1rem;
     }
@@ -69,8 +72,13 @@
         padding:4rem 0 5rem;
     }
     &__ol li{
-        @include shadow(.3);
         list-style: none;
+    }
+    &__ol h2{
+        margin: 0 0 0 .75rem;
+    }
+    &__ol .fonc-carte{
+        @include shadow(.3);
         counter-increment: my-awesome-counter;
         font-size: 1rem;
         font-weight: bold;
@@ -80,7 +88,7 @@
         padding: 1.5rem 1rem;
         margin: 0 0 0 .875rem;
     }
-    &__ol li::before {
+    &__ol .fonc-carte::before {
         display: inline-block;
         position: relative;
         left: -1.75rem;
@@ -108,31 +116,35 @@
     flex-wrap: wrap;
     height: fit-content;
     background-color: $lightgrey;
-    padding: 3rem 0;
+    padding: 2rem 0 3rem 0;
+    h2{
+
+        text-align: left;
+        width: 90%;
+        margin: 1rem 0;
+    }
     &__grid-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap:1rem 0 ;
         width: 90%;
         height: fit-content;
     }
-    h2{
-        text-align: left;
-        width: 90%;
-    }
+
 }
 .link-resto{
     @include shadow(.3);
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-end;
     background-color: white;
     border-radius: 1rem;
-    margin: 1rem 0;
     height: 250px;
     &__new{
         position: absolute;
         background-color: $tertiary;
         color: darken($color: $tertiary, $amount:50);
         border-radius:.2rem;
-        right: 5%;
         margin: 1rem 1rem 0 0;
         padding: .3rem 1rem;
 
@@ -147,6 +159,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        margin: 0 auto;
         width: 90%;
         height: 30%;
         div{
@@ -182,7 +195,7 @@ i{
 }
 /*---FOOTER---*/
 
-/*---La-PALETTE-DU-GOUT---*/
+/*---MENU PAGE---*/
 
 /*---THUMBNAIL---*/
 .thumbnail{
@@ -275,12 +288,92 @@ i{
 .menu-prix{
     font-weight: bold;
 }
-/*---COMMANDER/FOOTER---*/
-.sec-menu__footer{
-    display: flex;
-    justify-content: center;
-    padding: 2rem 0;
-    .purple-button{
-        padding: 1rem 3rem;
+
+/*------MEDIAQUERIES------*/
+/*---TABLET---*/
+@media (min-width:768px){
+    .sec-explore__div{
+        height:120px;
+        width: 90%;
+        padding: 2rem 0 3rem 0;
+        h2{
+            text-align: center;
+            width: 100%;
+        }
+        p{
+            width: 100%;
+        }
+    }
+    .sec-fonction__ol{
+
+        justify-content: space-around;
+        height: 230px;
+        .fonc-titre{
+            width: 100%;
+        }
+        .fonc-carte{
+            width: 44%;
+        }
+    }
+    .sec-rest{
+        &__grid-container{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-gap:1rem;
+        }
+
+    }
+}
+@media (min-width:1024px){
+    .sec-fonction__ol{
+        justify-content: space-around;
+        height: 125px;
+        .fonc-carte{
+            width: 27%;
+        }
+    }
+    .sec-rest{
+        &__grid-container{
+            grid-template-columns: repeat(3,1fr);
+        }
+    }
+    @media (min-width:1440px){
+        .sec-fonction__ol{
+            padding: 2rem 0 3rem;
+            .fonc-carte{
+                width: 29%;
+            }
+        }
+        .sec-rest{
+            &__grid-container{
+                grid-template-columns: repeat(4,1fr);
+            }
+        }
+    }
+}
+/*---RESTAURANT-PAGES---*/
+/*---TABLET---*/
+@media (min-width:768px){
+    .sec-item-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        h3{
+            margin: 2rem 0 .5rem .5rem;
+            width: 100%;
+        }
+    }
+    .menu-item{
+        margin: .5rem 0;
+        width: 48%;
+    }
+}
+@media (min-width:1024px){
+    .sec-item-container{
+        justify-content: space-around;
+        h3{
+            margin: 2rem 0 .5rem .5rem;
+            width: 100%;
+        }
     }
 }
