All Anims done verifs to do

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -21,6 +21,9 @@ footer{
         font-size: 1rem;
         margin: 0 1rem 0 0;
     }
+    a{
+        color: white;
+    }
 }/*---COMMANDER/FOOTER---*/
 .sec-menu__footer{
     display: flex;
