--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,6 +71,10 @@ footer {
   margin: 0 1rem 0 0;
 }
 
+.footer-list a {
+  color: white;
+}
+
 /*---COMMANDER/FOOTER---*/
 .sec-menu__footer {
   display: -webkit-box;
@@ -149,6 +153,130 @@ a {
   font-weight: lighter;
 }
 
+/*---ANIMS---*/
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeup {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(0, 1rem);
+            transform: translate(0, 1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes fadeup {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(0, 1rem);
+            transform: translate(0, 1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes fadeout {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  90% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  90% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+/*---LOADER---*/
+.loader {
+  position: fixed;
+  z-index: 2;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-animation: fadeout 3s;
+          animation: fadeout 3s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.loader div {
+  width: 250px;
+  height: 250px;
+  margin: auto auto;
+  background-color: white;
+  -webkit-box-shadow: inset 0rem -0.5em 0rem 0.5rem #9356DC;
+          box-shadow: inset 0rem -0.5em 0rem 0.5rem #9356DC;
+  border-radius: 50%;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+}
+
 /*---PLACE---*/
 .sec-place {
   background-color: #eaeaea;
@@ -217,9 +345,20 @@ a {
   color: white;
   border: none;
   border-radius: 2rem;
-  background: -webkit-gradient(linear, left bottom, left top, from(#9356DC), to(#FF79DA));
-  background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356DC), to(#FF79DA));
+  background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
   padding: 1rem 1.5rem;
+  -webkit-transition: -webkit-box-shadow .25s, -webkit-filter .25s;
+  transition: -webkit-box-shadow .25s, -webkit-filter .25s;
+  transition: box-shadow .25s, filter .25s;
+  transition: box-shadow .25s, filter .25s, -webkit-box-shadow .25s, -webkit-filter .25s;
+}
+
+.purple-button:hover {
+  -webkit-filter: brightness(1.1);
+          filter: brightness(1.1);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.6) 0rem 0.2rem 0.5rem 0rem;
+          box-shadow: rgba(0, 0, 0, 0.6) 0rem 0.2rem 0.5rem 0rem;
 }
 
 /*---FONCTIONNEMENT---*/
@@ -392,14 +531,19 @@ i {
 }
 
 .fas.fa-heart {
-  color: rgba(255, 255, 255, 0);
+  color: #9c47fc;
+  opacity: 0;
+  -webkit-transition: opacity .25s;
+  transition: opacity .25s;
 }
 
 .far {
+  color: black;
+  -webkit-transition: color .25s;
+  transition: color .25s;
   position: relative;
   left: 1.5rem;
   z-index: 1;
-  color: black;
 }
 
 .far:hover {
@@ -407,7 +551,7 @@ i {
 }
 
 .far:hover + .fas {
-  color: #9c47fc;
+  opacity: 1;
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
   -webkit-background-clip: text;
@@ -452,6 +596,8 @@ i {
   display: flex;
   width: 90%;
   margin: 0 auto;
+  -webkit-animation: fade 1s;
+          animation: fade 1s;
 }
 
 .sec-menu__main {
@@ -462,6 +608,8 @@ i {
 .sec-menu__footer {
   width: 90%;
   margin: 0 auto;
+  -webkit-animation: fade 1s;
+          animation: fade 1s;
 }
 
 .menu-titre {
@@ -476,6 +624,29 @@ i {
 }
 
 /*---CARTES---*/
+.entrees {
+  -webkit-animation: fadeup .5s;
+          animation: fadeup .5s;
+}
+
+.plats {
+  -webkit-animation: fadeup .5s;
+          animation: fadeup .5s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-delay: .125s;
+          animation-delay: .125s;
+}
+
+.desserts {
+  -webkit-animation: fadeup .5s;
+          animation: fadeup .5s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-delay: .25s;
+          animation-delay: .25s;
+}
+
 .menu-item {
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
           box-shadow: rgba(0, 0, 0, 0.1) 0rem 0.2rem 0.5rem 0rem;
@@ -483,6 +654,9 @@ i {
   display: -ms-flexbox;
   display: flex;
   background-color: white;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border-radius: 1rem;
   margin: 1rem 0;
   height: 75px;
@@ -498,31 +672,14 @@ i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: .25s;
+  transition: .25s;
   padding: 0 1rem;
-  width: 100%;
+  width: 90%;
   height: 100%;
 }
 
 .menu-item__check {
-  height: 100%;
-  width: 0%;
-  background-color: #99E2D0;
-}
-
-.menu-item .fa-check-circle {
-  font-size: 0rem;
-}
-
-.menu-item:hover {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.menu-item:hover .menu-item__content {
-  padding: 0 1rem;
-}
-
-.menu-item:hover .menu-item__check {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -532,12 +689,40 @@ i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 25%;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-color: #99E2D0;
+}
+
+.menu-item .fa-check-circle {
+  font-size: 1.5rem;
+  color: white;
+  opacity: 0;
+  font-size: 0rem;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.menu-item:hover {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.menu-item:hover .menu-item__content {
+  padding: 0 1rem;
+  width: 75%;
+}
+
+.menu-item:hover .menu-item__check {
+  width: 5rem;
   border-radius: 0 1rem 1rem 0;
 }
 
 .menu-item:hover .fa-check-circle {
-  color: white;
+  opacity: 1;
   font-size: 1.5rem;
 }
 
@@ -553,10 +738,18 @@ i {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  overflow: hidden;
+}
+
+.menu-food p, .menu-food h4 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu-prix {
   font-weight: bold;
+  margin: 0 0 0 0.5rem;
 }
 
 /*------MEDIAQUERIES------*/
@@ -645,12 +838,25 @@ i {
 }
 
 @media (min-width: 1024px) {
+  .sec-menu__main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
   .sec-item-container {
+    width: 32%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
   .sec-item-container h3 {
     margin: 2rem 0 .5rem .5rem;
+    width: 100%;
+  }
+  .menu-item {
+    margin: .5rem 0;
     width: 100%;
   }
 }
