last version all anims

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,8 +1,8 @@
 @font-face {
     font-family:"shrikhand";
-    src: url("../../sass/base/fonts/Shrikhand-Regular.ttf");
+    src: url("../fonts/Shrikhand-Regular.ttf");
 }
 @font-face {
     font-family:"roboto";
-    src: url("../../sass/base/fonts/Roboto-Regular.ttf");
+    src: url("../fonts/Roboto-Regular.ttf");
 }
