--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,17 +1,17 @@
 /*---VARIABLES---*/
-@import "./utils/variables";
+@import "utils/variables";
 /*---MIXINS---*/
-@import "./utils/mixins";
+@import "utils/mixins";
 /*---HEADER---*/
-@import "./layout/header";
+@import "layout/header";
 /*---FOOTER---*/
-@import "./layout/footer";
+@import "layout/footer";
 /*---TYPO---*/
-@import "./base/typography";
+@import "base/typography";
 /*---BASE---*/
-@import "./base/base";
+@import "base/base";
 /*---ANIMS---*/
-@import "./base/animations";
+@import "base/animations";
 /*---LOADER---*/
 .loader {
     position: fixed;
